<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.crowncap.projecteuler.ProblemSlidePagerActivity" >
    
    <item
        android:id="@+id/action_scroll_to_top"
        android:icon="@drawable/ic_scroll_to_top"
        android:title="@string/action_scroll_to_top"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_scroll_to_bottom"
        android:icon="@drawable/ic_scroll_to_bottom"
        android:title="@string/action_scroll_to_bottom"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>