<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="${relativePackage}.${activityClass}"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:background="@color/brown" >
    
	<ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_centerVertical="true" >
    
	    <RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingBottom="@dimen/activity_vertical_margin"
		    android:paddingLeft="@dimen/activity_horizontal_margin"
		    android:paddingRight="@dimen/activity_horizontal_margin"
		    android:paddingTop="@dimen/activity_vertical_margin"
		    android:focusableInTouchMode="true" >
		    
	        <ImageView 
	            android:id="@+id/logo"
	            android:src="@drawable/ic_launcher_web"
	            android:layout_width="150sp"
	            android:layout_height="150sp"
	            android:layout_marginBottom="24sp"
	            android:layout_centerHorizontal="true"
	            android:contentDescription="@string/logo_description" />
		    
	        <EditText
	            android:id="@+id/input_username"
	            android:layout_width="400sp"
	            android:layout_centerHorizontal="true"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="16sp"
	            android:layout_below="@+id/logo"
	            android:inputType="textNoSuggestions"
	            android:textColor="@color/orange"
	            android:textColorHint="@color/orange"
	            android:textCursorDrawable="@null"
	            android:background="@drawable/projecteulertheme_edit_text_holo_light"
	            android:hint="@string/username"/>
	        
	        <EditText
	            android:id="@+id/input_password"
	            android:layout_width="400sp"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="16sp"
	            android:layout_centerHorizontal="true"
	            android:layout_below="@+id/input_username"
	            android:inputType="textPassword"
	            android:textColor="@color/orange"
	            android:textCursorDrawable="@null"
	            android:background="@drawable/projecteulertheme_edit_text_holo_light"
	            android:textColorHint="@color/orange"
	            android:hint="@string/password"/>
		
		   	<Button
			    android:id="@+id/signin_button"
			    android:layout_width="400sp"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="16sp"
			    android:layout_below="@+id/input_password"
			    android:layout_centerHorizontal="true"
			    android:onClick="signInAction"
			    android:text="@string/sign_in"
			    android:textSize="15sp"
			    android:background="@drawable/button_background"
			    android:textColor="@color/orange" />
		   	
		 	<Button
			    android:id="@+id/problems_button"
			    android:layout_width="400sp"
			    android:layout_height="wrap_content"
			    android:layout_below="@+id/signin_button"
			    android:layout_centerHorizontal="true"
			    android:onClick="showProblemsAction"
			    android:text="@string/problems"
			    android:textSize="15sp"
			    android:background="@drawable/button_background"
			    android:textColor="@color/orange" />
		
		</RelativeLayout>
	</ScrollView>
</RelativeLayout>